--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                                     <div class="phone-lines__line"></div>
                                                 </div>
                                                 <img class="phone-popup__image" src="./assets/images/how/4.1.png" alt="popup__image">
-                                                <span class="phone__title">Поиск услуги или товара</span>
+                                                <span class="phone__title">Описание услуги или товара</span>
                                             </div>
                                         </div>
                                         <li class="top-how__item how__item">
@@ -276,7 +276,7 @@
                                                     <div class="phone-lines__line"></div>
                                                 </div>
                                                 <img class="phone-popup__image" src="./assets/images/how/5.1.png" alt="popup__image">
-                                                <span class="phone__title">Поиск услуги или товара</span>
+                                                <span class="phone__title">Добавление на карту</span>
                                             </div>
                                         </div>
                                         <li class="top-how__item how__item">
